--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -5,7 +5,6 @@
     android:id="@+id/account"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/background_light"
     android:orientation="vertical"
     tools:context=".AccountFragment">
 
@@ -13,71 +12,75 @@
         android:id="@+id/AccountTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Account"
-        android:textSize="30sp"
-        android:textStyle="bold"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="16dp"/>
+        android:layout_marginBottom="16dp"
+        android:text="Account"
+        android:textColor="?attr/colorOnBackground"
+        android:textSize="30sp"
+        android:textStyle="bold" />
 
     <Button
         android:id="@+id/buttonAccountInfo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Account Info"
-        android:textSize="16sp"
-        android:textColor="@android:color/white"
         android:layout_below="@id/AccountTitle"
-        android:layout_marginBottom="8dp"/>
+        android:layout_marginBottom="8dp"
+        android:backgroundTint="?attr/colorButtonNormal"
+        android:text="Account Info"
+        android:textColor="@android:color/white"
+        android:textSize="16sp" />
 
     <RelativeLayout
         android:id="@+id/relativelayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/buttonAccountInfo"
         android:layout_margin="16dp"
         android:background="@drawable/rounded_border_bg"
-        android:visibility="invisible"
-        android:layout_below="@id/buttonAccountInfo">
+        android:visibility="invisible">
 
         <TextView
             android:id="@+id/emailInfo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:padding="16dp"
             android:text="Email: "
-            android:textSize="22sp"
-            android:textColor="@android:color/black"
-            android:padding="16dp"/>
+            android:textColor="?attr/colorOnBackground"
+            android:textSize="22sp" />
 
         <TextView
             android:id="@+id/usernameInfo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Username:"
-            android:textSize="22sp"
-            android:textColor="@android:color/black"
+            android:layout_below="@id/emailInfo"
             android:padding="16dp"
-            android:layout_below="@id/emailInfo"/>
+            android:text="Username:"
+            android:textColor="?attr/colorOnBackground"
+            android:textSize="22sp" />
 
         <Button
             android:id="@+id/buttonInitiateUsernameChange"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Change Username"
-            android:textSize="16sp"
-            android:textColor="@android:color/white"
             android:layout_below="@id/usernameInfo"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="15dp"
-            android:layout_marginStart="16dp"/>
+            android:backgroundTint="?attr/colorButtonNormal"
+            android:text="Change Username"
+            android:textColor="@android:color/white"
+            android:textSize="16sp" />
 
         <Button
             android:id="@+id/buttonInitiatePasswordReset"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Reset Password"
-            android:textSize="15sp"
-            android:textColor="@android:color/white"
             android:layout_below="@id/usernameInfo"
-            android:layout_toEndOf="@id/buttonInitiateUsernameChange"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:layout_marginStart="16dp"/>
+            android:layout_toEndOf="@id/buttonInitiateUsernameChange"
+            android:backgroundTint="?attr/colorButtonNormal"
+            android:text="Reset Password"
+            android:textColor="@android:color/white"
+            android:textSize="15sp" />
     </RelativeLayout>
 </RelativeLayout>
