--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="lightGray">#6b7280</color>
-    <color name="lightpurple">#F8ECFF</color>
+    <color name="lightPurple">#F8ECFF</color>
+    <color name="purple">#6750a4</color>
 </resources>
