--- a/app/src/main/res/drawable/rounded_border_bg.xml
+++ b/app/src/main/res/drawable/rounded_border_bg.xml
@@ -4,6 +4,6 @@
     <solid android:color="@android:color/transparent" />
     <stroke
         android:width="1dp"
-        android:color="#000000" /> <!-- Set your desired border color and width -->
+        android:color="?attr/colorOnBackground" /> <!-- Set your desired border color and width -->
     <corners android:radius="1dp" /> <!-- Set the radius to adjust the corner roundness -->
 </shape>
