--- a/app/src/main/res/layout/fragment_add_expense.xml
+++ b/app/src/main/res/layout/fragment_add_expense.xml
@@ -17,7 +17,7 @@
         android:gravity="center"
         android:text="ADD EXPENSE"
         android:textSize="30sp"
-        android:textColor="#333333"
+        android:textColor="?attr/colorOnBackground"
         android:textStyle="bold"/>
 
     <com.google.android.material.textfield.TextInputLayout
