--- a/app/src/main/res/layout/fragment_reports.xml
+++ b/app/src/main/res/layout/fragment_reports.xml
@@ -21,7 +21,7 @@
             android:padding="10dp"
             android:text="Breakdown"
             android:textAlignment="center"
-            android:textColor="@color/black"
+            android:textColor="?attr/colorOnBackground"
             android:textSize="20sp"
             android:layout_marginBottom="12dp"
             />
