fix: forgot password properly works with empty email
email field now doesn't allow multiple lines, forgot password now works with the launchMode of singleTask

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -39,6 +39,7 @@
         android:textColorHint="@color/lightGray"
         android:drawableLeft="@drawable/baseline_email_24"
         android:drawablePadding="8dp"
+        android:inputType="textEmailAddress"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
