--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -7,4 +7,8 @@
         <item name="colorSurface">@color/black</item>
         <item name="colorButtonNormal">@color/purple</item>
     </style>
+
+    <style name="NoTintButton" parent="Widget.MaterialComponents.Button">
+        <item name="backgroundTint">@null</item>
+    </style>
 </resources>
