--- a/app/src/main/res/layout/list_expenses.xml
+++ b/app/src/main/res/layout/list_expenses.xml
@@ -17,6 +17,7 @@
             android:id="@+id/lin_card"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@android:color/white"
             android:orientation="horizontal">
 
             <ImageView
