--- a/app/src/main/res/layout/change_password_dialog.xml
+++ b/app/src/main/res/layout/change_password_dialog.xml
@@ -29,7 +29,7 @@
             style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="New Passowrd"
+            android:hint="New Password"
             android:inputType="textPassword"
             android:singleLine="true" />
     </com.google.android.material.textfield.TextInputLayout>
