--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -6,6 +6,7 @@
         <item name="colorOnBackground">@color/white</item>
         <item name="colorSurface">@color/black</item>
         <item name="colorButtonNormal">@color/purple</item>
+        <item name="android:textColor">@color/black</item>
     </style>
 
     <style name="NoTintButton" parent="Widget.MaterialComponents.Button">
