--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -5,8 +5,7 @@
     android:id="@+id/settings"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SettingsFragment"
-    android:background="@color/lightPurple">
+    tools:context=".SettingsFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -27,110 +26,113 @@
                 android:padding="10dp"
                 android:text="Settings"
                 android:textAlignment="center"
+                android:textColor="?attr/colorOnBackground"
                 android:textSize="30sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/cardView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/SettingsTitle"
-                android:paddingTop="10dp"
-                android:id="@+id/cardView">
+                android:paddingTop="10dp">
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Profile"
                         android:drawableLeft="@drawable/baseline_person_24"
+                        android:drawableRight="@drawable/baseline_keyboard_arrow_right_24"
                         android:drawablePadding="8dp"
                         android:padding="10dp"
-                        android:textSize="25sp"
-                        android:background="@color/lightPurple"
-                        android:drawableRight="@drawable/baseline_keyboard_arrow_right_24"
-                        />
+                        android:text="Profile"
+                        android:textColor="?attr/colorOnBackground"
+                        android:textSize="25sp" />
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Dashboard"
                         android:drawableLeft="@drawable/baseline_dashboard_24"
-                        android:drawablePadding="8dp"
-                        android:textSize="25sp"
-                        android:padding="10dp"
-                        android:background="@color/lightPurple"
                         android:drawableRight="@drawable/baseline_keyboard_arrow_right_24"
-                        />
+                        android:drawablePadding="8dp"
+                        android:padding="10dp"
+                        android:text="Dashboard"
+                        android:textColor="?attr/colorOnBackground"
+                        android:textSize="25sp" />
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Calculator"
                         android:drawableLeft="@drawable/baseline_calculate_24"
-                        android:drawablePadding="8dp"
-                        android:textSize="25sp"
-                        android:padding="10dp"
-                        android:background="@color/lightPurple"
                         android:drawableRight="@drawable/baseline_keyboard_arrow_right_24"
-                        />
+                        android:drawablePadding="8dp"
+                        android:padding="10dp"
+                        android:text="Calculator"
+                        android:textColor="?attr/colorOnBackground"
+                        android:textSize="25sp" />
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Trends"
                         android:drawableLeft="@drawable/baseline_data_exploration_24"
-                        android:drawablePadding="8dp"
-                        android:textSize="25sp"
-                        android:padding="10dp"
-                        android:background="@color/lightPurple"
                         android:drawableRight="@drawable/baseline_keyboard_arrow_right_24"
-                        />
+                        android:drawablePadding="8dp"
+                        android:padding="10dp"
+                        android:text="Trends"
+                        android:textColor="?attr/colorOnBackground"
+                        android:textSize="25sp" />
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Monthly Statistics"
                         android:drawableLeft="@drawable/baseline_bar_chart_24"
-                        android:drawablePadding="8dp"
-                        android:textSize="25sp"
-                        android:padding="10dp"
-                        android:background="@color/lightPurple"
                         android:drawableRight="@drawable/baseline_keyboard_arrow_right_24"
-                        />
+                        android:drawablePadding="8dp"
+                        android:padding="10dp"
+                        android:text="Monthly Statistics"
+                        android:textColor="?attr/colorOnBackground"
+                        android:textSize="25sp" />
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="About"
                         android:drawableLeft="@drawable/baseline_info_24"
-                        android:drawablePadding="8dp"
-                        android:textSize="25sp"
-                        android:padding="10dp"
-                        android:background="@color/lightPurple"
                         android:drawableRight="@drawable/baseline_keyboard_arrow_right_24"
-                        />
+                        android:drawablePadding="8dp"
+                        android:padding="10dp"
+                        android:text="About"
+                        android:textColor="?attr/colorOnBackground"
+                        android:textSize="25sp" />
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Contact Us"
                         android:drawableLeft="@drawable/baseline_contact_mail_24"
-                        android:drawablePadding="8dp"
-                        android:textSize="25sp"
-                        android:padding="10dp"
-                        android:background="@color/lightPurple"
                         android:drawableRight="@drawable/baseline_keyboard_arrow_right_24"
-                        />
+                        android:drawablePadding="8dp"
+                        android:padding="10dp"
+                        android:text="Contact Us"
+                        android:textColor="?attr/colorOnBackground"
+                        android:textSize="25sp" />
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_below="@id/cardView"
                         android:gravity="center_vertical"
                         android:orientation="horizontal"
-                        android:layout_below="@id/cardView"
-                        android:paddingLeft="10dp"
-                        android:background="@color/lightPurple">
+                        android:paddingLeft="10dp">
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:paddingEnd="8dp"
                             android:text="Dark Mode"
+                            android:textColor="?attr/colorOnBackground"
                             android:textSize="25sp" />
 
                         <com.google.android.material.switchmaterial.SwitchMaterial
@@ -141,22 +143,22 @@
                     </LinearLayout>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
+
             <Button
                 android:id="@+id/buttonLogOut"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@id/cardView"
+                android:layout_centerHorizontal="true"
                 android:layout_gravity="center"
-                android:text="Logout"
-                android:textColor="@android:color/black"
-                android:textSize="25sp"
                 android:background="@android:color/transparent"
                 android:drawableLeft="@drawable/baseline_exit_to_app_24"
                 android:drawablePadding="8dp"
                 android:paddingStart="16dp"
                 android:paddingEnd="16dp"
-                android:layout_below="@id/cardView"
-                android:layout_centerHorizontal="true"
-                />
+                android:text="Logout"
+                android:textColor="?attr/colorOnBackground"
+                android:textSize="25sp" />
         </RelativeLayout>
     </LinearLayout>
 </FrameLayout>
