--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -40,7 +40,7 @@
         android:layout_marginBottom="10dp"
         android:hint="Full Name"
         android:padding="16dp"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textColorHint="@color/lightGray" />
 
     <!-- Last Name field -->
@@ -53,7 +53,7 @@
         android:layout_marginBottom="10dp"
         android:hint="Email Address"
         android:padding="16dp"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textColorHint="@color/lightGray"
         android:drawableLeft="@drawable/baseline_email_24"
         android:drawablePadding="8dp"/>
@@ -66,7 +66,7 @@
         android:layout_marginBottom="10dp"
         android:hint="Username"
         android:padding="16dp"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textColorHint="@color/lightGray" />
 
     <!-- Password field -->
@@ -78,7 +78,7 @@
         android:hint="Password"
         android:inputType="textPassword"
         android:padding="16dp"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textColorHint="@color/lightGray"
         android:drawableLeft="@drawable/baseline_key_24"
         android:drawablePadding="8dp"/>
@@ -92,7 +92,7 @@
         android:hint="Confirm Password"
         android:inputType="textPassword"
         android:padding="16dp"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textColorHint="@color/lightGray" />
 
     <!-- Sign Up button -->
